--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group = 'com.ev.battery.agent'
@@ -15,6 +16,10 @@ dependencies {
     implementation 'dev.langchain4j:langchain4j:0.35.0'
     implementation 'org.slf4j:slf4j-simple:2.0.12'
     testImplementation 'junit:junit:4.13.2'
+}
+
+application {
+    mainClass = 'com.ev.battery.agent.App'
 }
 
 java {
