--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,34 @@
+buildscript {
+    repositories { mavenCentral() }
+    dependencies {
+        classpath 'io.github.cdimascio:dotenv-java:3.0.0'
+    }
+}
+
+import io.github.cdimascio.dotenv.Dotenv
+
 plugins {
     id 'java'
     id 'application'
 }
-
-group = 'com.ev.battery.agent'
-version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'dev.langchain4j:langchain4j-vertex-ai-gemini:0.35.0'
-    implementation 'dev.langchain4j:langchain4j-vertex-ai:0.35.0'
-    implementation 'dev.langchain4j:langchain4j:0.35.0'
+    implementation 'dev.langchain4j:langchain4j-vertex-ai-gemini:0.36.2'
+    implementation 'dev.langchain4j:langchain4j-vertex-ai:0.36.2'
+    implementation 'dev.langchain4j:langchain4j:0.36.2'
     implementation 'org.slf4j:slf4j-simple:2.0.12'
-    testImplementation 'junit:junit:4.13.2'
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
 }
+
+group = 'com.ev.battery.agent'
+version = '1.0-SNAPSHOT'
 
 application {
     mainClass = 'com.ev.battery.agent.App'
@@ -25,5 +37,25 @@ application {
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+def dotenv = Dotenv.configure()
+    .directory(projectDir.toString())
+    .ignoreIfMissing()
+    .load()
+
+test {
+    useJUnitPlatform()
+    workingDir = rootProject.projectDir
+    
+    environment "GCLOUD_PROJECT_ID", dotenv.get("GCLOUD_PROJECT_ID")
+    environment "JIRA_TOKEN", dotenv.get("JIRA_TOKEN")
+    environment "JIRA_SPACE_KEY", dotenv.get("JIRA_SPACE_KEY")
+    
+    testLogging {
+        showStandardStreams = true
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+        exceptionFormat = "full"
     }
 }
